<resources>
    <string name="app_name">Vipassana</string>
    <string name="create_course">Create</string>
    <string name="duration">duration(in days)</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="deposit">Deposit</string>
    <string name="roomNumber">Room Number</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="add_student">Add</string>
    <string name="add_purchase">Add</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="should_not_be_empty">Fields should not be empty</string>
    <string name="invalid_error">This field is required.</string>
    <string name="seatNumber">Seat Number</string>
    <string name="add_deposit">Deposit</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="saveExpense">Save</string>
    <string name="cancel">Cancel</string>
    <string name="end">End</string>
    <string name="view">View</string>
    <string name="cant_view_pdf">Can\'t view pdf file</string>
    <string name="pdf_generated">Pdf Generated</string>
</resources>
